# flagship-varnish-poc

./: .gitignore  Dockerfile  Makefile  README.md  default.vcl  docker-compose.yml
example/: Dockerfile  index.js  package-lock.json  package.json
go-wrapper/: go.mod  go.sum  main.go
libvmod-flagship/: CHANGES.rst  README.rst  configure.ac  libflagship.h
libvmod-flagship/src/: Makefile.am  vmod_flagship.c  vmod_flagship.vcc
libvmod-flagship/src/tests/: test01.vtc
